Closed Bug 1823594 Opened 2 years ago Closed 2 years ago

Perma [tier 2] accessible/tests/mochitest/editabletext/test_1.html | assertion count 14 is more than expected 0 assertions

Categories

(Core :: Disability Access APIs, defect, P5)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox111 --- unaffected
firefox112 --- unaffected
firefox113 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: Jamie)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression, Whiteboard: [retriggered])

Attachments

(1 file)

Filed by: nfay [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=409580795&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/N-a3IXEcTcCLQUVT6DS-tg/runs/0/artifacts/public/logs/live_backing.log


[task 2023-03-21T05:48:40.964Z] 05:48:40     INFO - TEST-START | accessible/tests/mochitest/editabletext/test_1.html
[task 2023-03-21T05:48:40.966Z] 05:48:40     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/chrome/nsChromeRegistry.cpp:182
[task 2023-03-21T05:48:40.967Z] 05:48:40     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/checkouts/gecko/chrome/nsChromeProtocolHandler.cpp:73
[task 2023-03-21T05:48:40.977Z] 05:48:40     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: early callback, or time went backwards: '!aAllowIdleDispatch', file /builds/worker/checkouts/gecko/xpcom/threads/IdleTaskRunner.cpp:198
[task 2023-03-21T05:48:40.988Z] 05:48:40     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /builds/worker/checkouts/gecko/parser/html/nsHtml5StreamParser.cpp:1235
[task 2023-03-21T05:48:41.094Z] 05:48:41     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: early callback, or time went backwards: '!aAllowIdleDispatch', file /builds/worker/checkouts/gecko/xpcom/threads/IdleTaskRunner.cpp:198
[task 2023-03-21T05:48:41.220Z] 05:48:41     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: early callback, or time went backwards: '!aAllowIdleDispatch', file /builds/worker/checkouts/gecko/xpcom/threads/IdleTaskRunner.cpp:198
[task 2023-03-21T05:48:41.314Z] 05:48:41     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: early callback, or time went backwards: '!aAllowIdleDispatch', file /builds/worker/checkouts/gecko/xpcom/threads/IdleTaskRunner.cpp:198
[task 2023-03-21T05:48:41.330Z] 05:48:41     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: early callback, or time went backwards: '!aAllowIdleDispatch', file /builds/worker/checkouts/gecko/xpcom/threads/IdleTaskRunner.cpp:198
[task 2023-03-21T05:48:41.336Z] 05:48:41     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: early callback, or time went backwards: '!aAllowIdleDispatch', file /builds/worker/checkouts/gecko/xpcom/threads/IdleTaskRunner.cpp:198
[task 2023-03-21T05:48:41.455Z] 05:48:41     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: early callback, or time went backwards: '!aAllowIdleDispatch', file /builds/worker/checkouts/gecko/xpcom/threads/IdleTaskRunner.cpp:198
[task 2023-03-21T05:48:41.478Z] 05:48:41     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: early callback, or time went backwards: '!aAllowIdleDispatch', file /builds/worker/checkouts/gecko/xpcom/threads/IdleTaskRunner.cpp:198
[task 2023-03-21T05:48:41.487Z] 05:48:41     INFO - GECKO(9188) | setTextContents 'hello'
[task 2023-03-21T05:48:41.490Z] 05:48:41     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: '!editingHost', file /builds/worker/checkouts/gecko/editor/libeditor/HTMLEditor.cpp:995
[task 2023-03-21T05:48:41.490Z] 05:48:41     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: mozInlineSpellCHecker::UpdateCurrentDictionary() failed, but ignored: 'NS_SUCCEEDED(rvIgnored)', file /builds/worker/checkouts/gecko/editor/libeditor/EditorBase.cpp:5607
[task 2023-03-21T05:48:41.495Z] 05:48:41     INFO - GECKO(9188) | [Parent 5220, Main Thread] ###!!! ASSERTION: Wrong in offset: 'Error', file /builds/worker/checkouts/gecko/accessible/base/TextLeafRange.cpp:1720
[task 2023-03-21T05:48:41.877Z] 05:48:41     INFO -  Initializing stack-fixing for the first stack frame, this may take a while...
[task 2023-03-21T05:49:04.482Z] 05:49:04     INFO - GECKO(9188) | #01: NS_DebugBreak(unsigned int, char const*, char const*, char const*, int) [xpcom/base/nsDebugImpl.cpp:492]
[task 2023-03-21T05:49:04.489Z] 05:49:04     INFO - GECKO(9188) | #02: mozilla::a11y::TextLeafPoint::CharBounds() [accessible/base/TextLeafRange.cpp:1720]
[task 2023-03-21T05:49:04.490Z] 05:49:04     INFO - GECKO(9188) | #03: mozilla::a11y::HyperTextAccessibleBase::CharBounds(int, unsigned int) [accessible/basetypes/HyperTextAccessibleBase.cpp:223]
[task 2023-03-21T05:49:04.490Z] 05:49:04     INFO - GECKO(9188) | #04: mozilla::a11y::HyperTextAccessible::CharBounds(int, unsigned int) [accessible/generic/HyperTextAccessible.cpp:1572]
[task 2023-03-21T05:49:04.491Z] 05:49:04     INFO - GECKO(9188) | #05: mozilla::a11y::HyperTextAccessible::GetCaretRect(nsIWidget**) [accessible/generic/HyperTextAccessible.cpp:1835]
[task 2023-03-21T05:49:04.491Z] 05:49:04     INFO - GECKO(9188) | #06: mozilla::a11y::AccessibleWrap::HandleAccEvent(mozilla::a11y::AccEvent*) [accessible/windows/msaa/AccessibleWrap.cpp:89]
[task 2023-03-21T05:49:04.492Z] 05:49:04     INFO - GECKO(9188) | #07: nsEventShell::FireEvent(mozilla::a11y::AccEvent*) [accessible/base/nsEventShell.cpp:55]
[task 2023-03-21T05:49:04.493Z] 05:49:04     INFO - GECKO(9188) | #08: mozilla::a11y::FocusManager::ProcessFocusEvent(mozilla::a11y::AccEvent*) [accessible/base/FocusManager.cpp:391]
[task 2023-03-21T05:49:04.493Z] 05:49:04     INFO - GECKO(9188) | #09: mozilla::a11y::EventQueue::ProcessEventQueue() [accessible/base/EventQueue.cpp:339]
[task 2023-03-21T05:49:04.494Z] 05:49:04     INFO - GECKO(9188) | #10: mozilla::a11y::NotificationController::WillRefresh(mozilla::TimeStamp) [accessible/base/NotificationController.cpp:946]
[task 2023-03-21T05:49:04.494Z] 05:49:04     INFO - GECKO(9188) | #11: nsRefreshDriver::Tick(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp, nsRefreshDriver::IsExtraTick) [layout/base/nsRefreshDriver.cpp:2567]
[task 2023-03-21T05:49:04.495Z] 05:49:04     INFO - GECKO(9188) | #12: mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:1775:15'>::Run() [xpcom/threads/nsThreadUtils.h:548]
[task 2023-03-21T05:49:04.496Z] 05:49:04     INFO - GECKO(9188) | #13: mozilla::RunnableTask::Run() [xpcom/threads/TaskController.cpp:554]
[task 2023-03-21T05:49:04.497Z] 05:49:04     INFO - GECKO(9188) | #14: mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex &> const&) [xpcom/threads/TaskController.cpp:867]
[task 2023-03-21T05:49:04.497Z] 05:49:04     INFO - GECKO(9188) | #15: mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex &> const&) [xpcom/threads/TaskController.cpp:698]
[task 2023-03-21T05:49:04.498Z] 05:49:04     INFO - GECKO(9188) | #16: mozilla::TaskController::ProcessPendingMTTask(bool) [xpcom/threads/TaskController.cpp:464]
[task 2023-03-21T05:49:04.498Z] 05:49:04     INFO - GECKO(9188) | #17: mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:188:7'>::Run() [xpcom/threads/nsThreadUtils.h:548]
[task 2023-03-21T05:49:04.499Z] 05:49:04     INFO - GECKO(9188) | #18: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1243]
[task 2023-03-21T05:49:04.499Z] 05:49:04     INFO - GECKO(9188) | #19: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:477]
[task 2023-03-21T05:49:04.500Z] 05:49:04     INFO - GECKO(9188) | #20: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:85]
[task 2023-03-21T05:49:04.500Z] 05:49:04     INFO - GECKO(9188) | #21: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:381]
[task 2023-03-21T05:49:04.501Z] 05:49:04     INFO - GECKO(9188) | #22: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:375]
[task 2023-03-21T05:49:04.501Z] 05:49:04     INFO - GECKO(9188) | #23: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:357]
[task 2023-03-21T05:49:04.502Z] 05:49:04     INFO - GECKO(9188) | #24: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:150]
[task 2023-03-21T05:49:04.503Z] 05:49:04     INFO - GECKO(9188) | #25: nsAppShell::Run() [widget/windows/nsAppShell.cpp:614]
[task 2023-03-21T05:49:04.503Z] 05:49:04     INFO - GECKO(9188) | #26: nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:296]
[task 2023-03-21T05:49:04.503Z] 05:49:04     INFO - GECKO(9188) | #27: XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:5651]
[task 2023-03-21T05:49:04.504Z] 05:49:04     INFO - GECKO(9188) | #28: XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:5851]
[task 2023-03-21T05:49:04.504Z] 05:49:04     INFO - GECKO(9188) | #29: XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:5907]
[task 2023-03-21T05:49:04.505Z] 05:49:04     INFO - GECKO(9188) | #30: mozilla::BootstrapImpl::XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/Bootstrap.cpp:45]
[task 2023-03-21T05:49:04.560Z] 05:49:04     INFO - GECKO(9188) | #31: NS_internal_main(int, char**, char**) [browser/app/nsBrowserApp.cpp:423]
[task 2023-03-21T05:49:04.574Z] 05:49:04     INFO - GECKO(9188) | #32: wmain(int, wchar_t**) [toolkit/xre/nsWindowsWMain.cpp:167]
[task 2023-03-21T05:49:04.575Z] 05:49:04     INFO - GECKO(9188) | #33: __scrt_common_main_seh() [/builds/worker/workspace/obj-build/browser/app/d:/agent/_work/3/s/src/vctools/crt/vcstartup/src/startup/exe_common.inl:288]
[task 2023-03-21T05:49:04.577Z] 05:49:04     INFO -  fix-stacks: error: failed to read debug info file `wkernel32.pdb` for `C:\Windows\System32\KERNEL32.DLL`
[task 2023-03-21T05:49:04.578Z] 05:49:04     INFO -  fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2023-03-21T05:49:04.578Z] 05:49:04     INFO -  fix-stacks: The system cannot find the file specified. (os error 2)
[task 2023-03-21T05:49:04.579Z] 05:49:04     INFO - GECKO(9188) | #34: BaseThreadInitThunk [C:\Windows\System32\KERNEL32.DLL + 0x17d69]
[task 2023-03-21T05:49:04.591Z] 05:49:04     INFO -  fix-stacks: error: failed to read debug info file `wntdll.pdb` for `C:\Windows\SYSTEM32\ntdll.dll`
[task 2023-03-21T05:49:04.592Z] 05:49:04     INFO -  fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2023-03-21T05:49:04.592Z] 05:49:04     INFO -  fix-stacks: The system cannot find the file specified. (os error 2)
[task 2023-03-21T05:49:04.593Z] 05:49:04     INFO - GECKO(9188) | #35: RtlInitializeExceptionChain [C:\Windows\SYSTEM32\ntdll.dll + 0x6bb9b]
[task 2023-03-21T05:49:04.593Z] 05:49:04     INFO - GECKO(9188) | #36: RtlClearBits [C:\Windows\SYSTEM32\ntdll.dll + 0x6bb1f]
[task 2023-03-21T05:49:04.594Z] 05:49:04     INFO - GECKO(9188) | [Parent 5220, Main Thread] ###!!! ASSERTION: Wrong in offset: 'Error', file /builds/worker/checkouts/gecko/accessible/base/TextLeafRange.cpp:1720
[task 2023-03-21T05:49:04.594Z] 05:49:04     INFO - GECKO(9188) | #01: NS_DebugBreak(unsigned int, char const*, char const*, char const*, int) [xpcom/base/nsDebugImpl.cpp:492]
[task 2023-03-21T05:49:04.595Z] 05:49:04     INFO - GECKO(9188) | #02: mozilla::a11y::TextLeafPoint::CharBounds() [accessible/base/TextLeafRange.cpp:1720]
[task 2023-03-21T05:49:04.595Z] 05:49:04     INFO - GECKO(9188) | #03: mozilla::a11y::HyperTextAccessibleBase::CharBounds(int, unsigned int) [accessible/basetypes/HyperTextAccessibleBase.cpp:223]
[task 2023-03-21T05:49:04.596Z] 05:49:04     INFO - GECKO(9188) | #04: mozilla::a11y::HyperTextAccessible::CharBounds(int, unsigned int) [accessible/generic/HyperTextAccessible.cpp:1572]
[task 2023-03-21T05:49:04.597Z] 05:49:04     INFO - GECKO(9188) | #05: mozilla::a11y::HyperTextAccessible::GetCaretRect(nsIWidget**) [accessible/generic/HyperTextAccessible.cpp:1835]
[task 2023-03-21T05:49:04.597Z] 05:49:04     INFO - GECKO(9188) | #06: mozilla::a11y::AccessibleWrap::HandleAccEvent(mozilla::a11y::AccEvent*) [accessible/windows/msaa/AccessibleWrap.cpp:89]
[task 2023-03-21T05:49:04.598Z] 05:49:04     INFO - GECKO(9188) | #07: nsEventShell::FireEvent(mozilla::a11y::AccEvent*) [accessible/base/nsEventShell.cpp:55]
[task 2023-03-21T05:49:04.598Z] 05:49:04     INFO - GECKO(9188) | #08: mozilla::a11y::SelectionManager::ProcessTextSelChangeEvent(mozilla::a11y::AccEvent*) [accessible/base/SelectionManager.cpp:167]
[task 2023-03-21T05:49:04.599Z] 05:49:04     INFO - GECKO(9188) | #09: mozilla::a11y::EventQueue::ProcessEventQueue() [accessible/base/EventQueue.cpp:380]
[task 2023-03-21T05:49:04.599Z] 05:49:04     INFO - GECKO(9188) | #10: mozilla::a11y::NotificationController::WillRefresh(mozilla::TimeStamp) [accessible/base/NotificationController.cpp:946]
[task 2023-03-21T05:49:04.600Z] 05:49:04     INFO - GECKO(9188) | #11: nsRefreshDriver::Tick(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp, nsRefreshDriver::IsExtraTick) [layout/base/nsRefreshDriver.cpp:2567]
[task 2023-03-21T05:49:04.600Z] 05:49:04     INFO - GECKO(9188) | #12: mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:1775:15'>::Run() [xpcom/threads/nsThreadUtils.h:548]
[task 2023-03-21T05:49:04.601Z] 05:49:04     INFO - GECKO(9188) | #13: mozilla::RunnableTask::Run() [xpcom/threads/TaskController.cpp:554]
[task 2023-03-21T05:49:04.601Z] 05:49:04     INFO - GECKO(9188) | #14: mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex &> const&) [xpcom/threads/TaskController.cpp:867]
[task 2023-03-21T05:49:04.602Z] 05:49:04     INFO - GECKO(9188) | #15: mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex &> const&) [xpcom/threads/TaskController.cpp:698]
[task 2023-03-21T05:49:04.602Z] 05:49:04     INFO - GECKO(9188) | #16: mozilla::TaskController::ProcessPendingMTTask(bool) [xpcom/threads/TaskController.cpp:464]
[task 2023-03-21T05:49:04.603Z] 05:49:04     INFO - GECKO(9188) | #17: mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:188:7'>::Run() [xpcom/threads/nsThreadUtils.h:548]
[task 2023-03-21T05:49:04.603Z] 05:49:04     INFO - GECKO(9188) | #18: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1243]
[task 2023-03-21T05:49:04.604Z] 05:49:04     INFO - GECKO(9188) | #19: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:477]
[task 2023-03-21T05:49:04.605Z] 05:49:04     INFO - GECKO(9188) | #20: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:85]
[task 2023-03-21T05:49:04.605Z] 05:49:04     INFO - GECKO(9188) | #21: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:381]
[task 2023-03-21T05:49:04.606Z] 05:49:04     INFO - GECKO(9188) | #22: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:375]
[task 2023-03-21T05:49:04.606Z] 05:49:04     INFO - GECKO(9188) | #23: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:357]
[task 2023-03-21T05:49:04.606Z] 05:49:04     INFO - GECKO(9188) | #24: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:150]
[task 2023-03-21T05:49:04.607Z] 05:49:04     INFO - GECKO(9188) | #25: nsAppShell::Run() [widget/windows/nsAppShell.cpp:614]
[task 2023-03-21T05:49:04.607Z] 05:49:04     INFO - GECKO(9188) | #26: nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:296]
[task 2023-03-21T05:49:04.608Z] 05:49:04     INFO - GECKO(9188) | #27: XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:5651]
[task 2023-03-21T05:49:04.608Z] 05:49:04     INFO - GECKO(9188) | #28: XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:5851]
[task 2023-03-21T05:49:04.609Z] 05:49:04     INFO - GECKO(9188) | #29: XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:5907]
[task 2023-03-21T05:49:04.609Z] 05:49:04     INFO - GECKO(9188) | #30: mozilla::BootstrapImpl::XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/Bootstrap.cpp:45]
[task 2023-03-21T05:49:04.609Z] 05:49:04     INFO - GECKO(9188) | #31: NS_internal_main(int, char**, char**) [browser/app/nsBrowserApp.cpp:423]
[task 2023-03-21T05:49:04.610Z] 05:49:04     INFO - GECKO(9188) | #32: wmain(int, wchar_t**) [toolkit/xre/nsWindowsWMain.cpp:167]
[task 2023-03-21T05:49:04.610Z] 05:49:04     INFO - GECKO(9188) | #33: __scrt_common_main_seh() [/builds/worker/workspace/obj-build/browser/app/d:/agent/_work/3/s/src/vctools/crt/vcstartup/src/startup/exe_common.inl:288]
[task 2023-03-21T05:49:04.611Z] 05:49:04     INFO - GECKO(9188) | #34: BaseThreadInitThunk [C:\Windows\System32\KERNEL32.DLL + 0x17d69]
[task 2023-03-21T05:49:04.612Z] 05:49:04     INFO - GECKO(9188) | #35: RtlInitializeExceptionChain [C:\Windows\SYSTEM32\ntdll.dll + 0x6bb9b]
[task 2023-03-21T05:49:04.612Z] 05:49:04     INFO - GECKO(9188) | #36: RtlClearBits [C:\Windows\SYSTEM32\ntdll.dll + 0x6bb1f]
[task 2023-03-21T05:49:04.613Z] 05:49:04     INFO - GECKO(9188) | setTextContents 'katze'
[task 2023-03-21T05:49:04.613Z] 05:49:04     INFO - GECKO(9188) | [Parent 5220, Main Thread] ###!!! ASSERTION: Wrong in offset: 'Error', file /builds/worker/checkouts/gecko/accessible/base/TextLeafRange.cpp:1720
[task 2023-03-21T05:49:04.614Z] 05:49:04     INFO - GECKO(9188) | #01: NS_DebugBreak(unsigned int, char const*, char const*, char const*, int) [xpcom/base/nsDebugImpl.cpp:492]
<...>
[task 2023-03-21T05:49:04.898Z] 05:49:04     INFO - GECKO(9188) | #36: RtlClearBits [C:\Windows\SYSTEM32\ntdll.dll + 0x6bb1f]
[task 2023-03-21T05:49:04.898Z] 05:49:04     INFO - GECKO(9188) | setTextContents ''
[task 2023-03-21T05:49:04.899Z] 05:49:04     INFO - GECKO(9188) | insertText 'hello' at 0 pos
[task 2023-03-21T05:49:04.899Z] 05:49:04     INFO - GECKO(9188) | insertText 'ma ' at 0 pos
[task 2023-03-21T05:49:04.900Z] 05:49:04     INFO - GECKO(9188) | insertText 'ma' at 2 pos
[task 2023-03-21T05:49:04.900Z] 05:49:04     INFO - GECKO(9188) | insertText ' hello' at 10 pos
[task 2023-03-21T05:49:04.901Z] 05:49:04     INFO - GECKO(9188) | MEMORY STAT | vsize 1458MB | vsizeMaxContiguous 1293MB | residentFast 466MB | heapAllocated 125MB
[task 2023-03-21T05:49:04.901Z] 05:49:04     INFO - TEST-OK | accessible/tests/mochitest/editabletext/test_1.html | took 4774ms
[task 2023-03-21T05:49:04.902Z] 05:49:04     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/chrome/nsChromeRegistry.cpp:182
[task 2023-03-21T05:49:04.902Z] 05:49:04     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/checkouts/gecko/chrome/nsChromeProtocolHandler.cpp:73
[task 2023-03-21T05:49:04.903Z] 05:49:04     INFO - GECKO(9188) | [Parent 5220, Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /builds/worker/checkouts/gecko/parser/html/nsHtml5StreamParser.cpp:1235
[task 2023-03-21T05:49:04.904Z] 05:49:04     INFO - TEST-UNEXPECTED-FAIL | accessible/tests/mochitest/editabletext/test_1.html | assertion count 14 is more than expected 0 assertions
[task 2023-03-21T05:49:04.904Z] 05:49:04     INFO - TEST-START | accessible/tests/mochitest/editabletext/test_2.html
Flags: needinfo?(jteh)
Whiteboard: [retriggered]

Set release status flags based on info from the regressing bug 1821954

Assignee: nobody → jteh
Flags: needinfo?(jteh)
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b4d81f731fd4 TextLeafPoint::CharBounds: Only fail the assertion if the offset is larger than the length. r=morgan
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: