Bug 1823594: TextLeafPoint::CharBounds: Only fail the assertion if the offset is larger than the length. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D173248