accessible/base/TextLeafRange.cpp
@@ -1717,7 +1717,13 @@ LayoutDeviceIntRect TextLeafPoint::CharBounds() {
 
     if (mOffset >= 0 &&
         static_cast<uint32_t>(mOffset) >= nsAccUtils::TextLength(local)) {
-      NS_ERROR("Wrong in offset");
+      // It's valid for a caller to query the length because the caret might be
+      // at the end of editable text. In that case, we should just silently
+      // return. However, we assert that the offset isn't greater than the
+      // length.
+      NS_ASSERTION(
+          static_cast<uint32_t>(mOffset) <= nsAccUtils::TextLength(local),
+          "Wrong in offset");
       return LayoutDeviceIntRect();
     }
 
